fixed spacing from header to title w/ br

--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,10 @@ ul {
     color: black;
 }
 
+#portrait {
+    padding-top: 3%;
+}
+
 
 /* Flex Class */
 
